# HRM_Tracker

./: .gitignore  README.md
EmployeeMonitoringAgent/: EmployeeMonitoringAgent.slnx
EmployeeMonitoringAgent/src/Agent.Application/: Agent.Application.csproj
EmployeeMonitoringAgent/src/Agent.Background/: Agent.Background.csproj  ConfigSyncWorker.cs  SyncWorker.cs  TelemetryWorker.cs  UpdateWorker.cs  WatchdogWorker.cs
EmployeeMonitoringAgent/src/Agent.Core/: Agent.Core.csproj
EmployeeMonitoringAgent/src/Agent.Infrastructure/: Agent.Infrastructure.csproj  DependencyInjection.cs
EmployeeMonitoringAgent/src/Agent.Network/: Agent.Network.csproj
backend/: package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.test.ts  app.ts  server.ts
backend/src/api/: v1.ts  (+1 more)
desktop-agent/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
desktop-agent/src/: App.jsx  main.jsx
desktop-agent/src-tauri/: Cargo.toml  agent_offline.db  tauri.conf.json
desktop-agent/src-tauri/icons/: icon.icns
desktop-agent/src-tauri/src/: lib.rs  main.rs
desktop-agent/src-tauri/src/commands/: mod.rs
desktop-agent/src-tauri/src/database/: mod.rs
desktop-agent/src-tauri/src/models/: mod.rs
desktop-agent/src-tauri/src/scheduler/: mod.rs
desktop-agent/src-tauri/src/screenshots/: mod.rs
desktop-agent/src-tauri/src/services/: system_service.rs
desktop-agent/src-tauri/src/tracking/: mod.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
(+185 files in other folders)
